@@ -5,7 +5,8 @@ Changelog
 1.0b18 (unreleased)
 ===================
 
-- Nothing changed yet.
+- Introduce environment option ``connect_mode``, either 'ssh+sudo' (default) or
+  plain 'ssh'.
 
 
 1.0b17 (2013-12-06)
